--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nowrx/react-native-twilio-voice-sdk": "^0.5.6",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@twilio/voice-react-native-sdk": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lottie-react-native": "^6.7.2",
+    "node-fetch": "^3.3.2",
+    "phone-formatter": "^0.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.12.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "ts-pattern": "^5.2.0",
+    "twilio": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
